--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -5,10 +5,73 @@
 @import "1-Basics/colors";
 @import "1-Basics/page";
 
+@media only screen and (min-width: 768px) {
+  .navBar {
+    height: 50px;
+  }
+
+  #blogLink {
+    margin-right: -18px;
+  }
+}
+
 .dropdown {
   display: flex;
 }
 
 .navBar {
   border-radius: 0px 0px 15px 15px;
+  background-color: #f3f3f3;
+}
+
+.navBrand {
+  font-family: "Inter";
+  font-weight: 700;
+  color: black;
+  font-size: 14pt;
+  padding: 0;
+  margin: 0;
+
+  .navBrandDot {
+    color: color(smBlue);
+  }
+}
+
+.toggleContainer {
+  background-color: color(smBlue);
+  height: 18px;
+  width: 30px;
+  padding: 0;
+  margin: 0;
+}
+
+.toggleIcon {
+  font-size: 22px;
+  color: color(white);
+  margin-top: -4px;
+}
+
+.footerContainer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  background-color: #f3f3f3;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.footerLeftColumn {
+  line-height: 0;
+  margin: 40px;
+  margin-bottom: 30px;
+
+  p {
+    color: color(smBlue);
+  }
+
+  #copyright {
+    color: grey;
+    font-size: 10pt;
+  }
 }
