--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -1,6 +1,7 @@
 h1 {
   font-family: "Inter";
   font-weight: 800;
+  text-align: center;
 }
 
 .navLink {
@@ -32,6 +33,7 @@ h1 {
 .navBar {
   border-radius: 0px 0px 15px 15px;
   background-color: #f3f3f3;
+  margin-bottom: 50px;
 }
 
 .navBrand {
