--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -1,7 +1,25 @@
 h1 {
   font-family: "Inter";
   font-weight: 800;
-  text-align: center;
+  color: black;
+}
+
+#toolH1 {
+  font-size: 48pt;
+  line-height: 48pt;
+}
+
+h3 {
+  font-family: "Inter";
+  font-weight: 600;
+}
+
+a {
+  color: color(smBlue);
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 .navLink {
@@ -15,12 +33,89 @@ h1 {
   color: color(smBlue);
 }
 
+#compInterestCalcPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  padding-top: 50px;
+  max-width: 1200px;
+}
+
+#headingContainer {
+  margin-right: 100px;
+  margin-top: 15px;
+}
+
+#calcDescription {
+  margin-left: 5px;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 14pt;
+  line-height: 18pt;
+}
+
+#calculatorBody {
+  background-color: #f3f3f3;
+  padding: 40px;
+  width: 425px;
+  border-radius: 25px;
+}
+
+#calculatorBody label {
+  font-family: "Inter";
+  font-weight: 700;
+  color: black;
+}
+
+#calculatorBody .calcInputField {
+  background-color: #e7e7e7;
+  border: none;
+  text-align: center;
+  font-family: monospace;
+  font-size: 16pt;
+}
+
+#calculatorBody #calcColumnSplit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#calculatorBody #calcColumnSplit #yearsBlock {
+  margin-right: 10px;
+}
+
+#calculatorBody #calcColumnSplit #percentBlock {
+  margin-left: 10px;
+}
+
+#calculatorBody #calcButton {
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 12pt;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  height: 50px;
+  width: 345px;
+}
+
+#calculatorBody #futureValueDiv {
+  background-color: white;
+  border-radius: 7px;
+  height: 65px;
+}
+
 @media only screen and (min-width: 768px) {
   .navBar {
     height: 50px;
   }
   #blogLink {
-    margin-right: -18px;
+    margin-right: -20px;
   }
 }
 
@@ -85,5 +180,9 @@ h1 {
 .footerLeftColumn #copyright {
   color: grey;
   font-size: 10pt;
+}
+
+.recentPostsContainer {
+  margin: 50px;
 }
 /*# sourceMappingURL=App.css.map */
