--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -6,6 +6,8 @@
 @import "1-Basics/page";
 
 //2-Pages
+@import "2-Pages/home";
+@import "2-Pages/resources";
 @import "2-Pages/compoundInterestCalculator";
 
 @media only screen and (min-width: 768px) {
