--- a/src/sass/2-Pages/_resources.scss
+++ b/src/sass/2-Pages/_resources.scss
@@ -1,5 +1,11 @@
 #resourcesPage {
   #resourcesTitle {
     text-align: center;
+    margin-bottom: 50px;
+  }
+
+  h3 {
+    text-align: center;
+    padding: 25px;
   }
 }
