--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -118,8 +118,64 @@ a:hover {
   max-width: 1000px;
 }
 
+#allPostsPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  margin: auto;
+  max-width: 750px;
+}
+
+#allPostsPage #allPostsHeader {
+  margin-bottom: 25px;
+}
+
+#allPostsPage #postFilterContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #f3f3f3;
+  padding: 25px;
+  max-width: 750px;
+  border-radius: 15px;
+}
+
+#allPostsPage #postFilterContainer p {
+  margin: auto 10px;
+  font-family: "Inter";
+  font-weight: 600;
+  color: black;
+}
+
+#allPostsPage #postFilterContainer .filter {
+  margin: 0px 10px;
+  padding: 5px 15px;
+  background-color: #1b94ff;
+}
+
 #resourcesPage #resourcesTitle {
   text-align: center;
+  margin-bottom: 50px;
+}
+
+#resourcesPage h3 {
+  text-align: center;
+  padding: 25px;
 }
 
 #compInterestCalcPage {
@@ -223,6 +279,18 @@ a:hover {
   background-color: white;
   border-radius: 7px;
   height: 65px;
+}
+
+.topicLabel {
+  text-align: center;
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 16pt;
+  color: #1b94ff;
+}
+
+.topicHeader {
+  text-align: center;
 }
 
 @media only screen and (min-width: 768px) {
