--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -84,6 +84,7 @@ a:hover {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
+  margin-bottom: 75px;
 }
 
 #landingHeader #landingTopicNavigation h3 {
@@ -104,18 +105,33 @@ a:hover {
   background-color: #1b94ff;
 }
 
-#recentPostsContainer {
-  border-radius: 24px;
+.recentPostCards {
+  border-radius: 20px;
   background: #ffffff;
-  -webkit-box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
-          box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: auto;
-  margin-top: 100px;
-  padding: 50px;
-  max-width: 1000px;
+  -webkit-box-shadow: 20px 20px 40px #d9d9d9, -20px -20px 60px #ffffff;
+          box-shadow: 20px 20px 40px #d9d9d9, -20px -20px 60px #ffffff;
+  width: 300px;
+  padding: 20px 25px;
+  margin-top: 35px;
+}
+
+.recentPostCards .cardArticleTitle {
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 16pt;
+}
+
+.recentPostCards .cardArticleExcerpt {
+  font-family: "Inter";
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.recentPostCards .cardReadMore {
+  font-family: "Inter";
+  font-weight: 500;
+  color: #1b94ff;
+  margin-bottom: 10px;
 }
 
 #allPostsPage {
@@ -130,11 +146,11 @@ a:hover {
       -ms-flex-align: stretch;
           align-items: stretch;
   margin: auto;
-  max-width: 750px;
+  max-width: 800px;
 }
 
 #allPostsPage #allPostsHeader {
-  margin-bottom: 25px;
+  margin: 25px 20px;
 }
 
 #allPostsPage #postFilterContainer {
@@ -150,8 +166,9 @@ a:hover {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   background-color: #f3f3f3;
-  padding: 25px;
-  max-width: 750px;
+  padding: 20px;
+  margin: 0px 15px;
+  max-width: 800px;
   border-radius: 15px;
 }
 
@@ -163,9 +180,10 @@ a:hover {
 }
 
 #allPostsPage #postFilterContainer .filter {
-  margin: 0px 10px;
+  margin: 5px 10px;
   padding: 5px 15px;
   background-color: #1b94ff;
+  font-size: 12pt;
 }
 
 #resourcesPage #resourcesTitle {
