--- a/src/sass/2-Pages/_blog.scss
+++ b/src/sass/2-Pages/_blog.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: stretch;
   margin: auto;
-  max-width: 750px;
+  max-width: 800px;
 
   #allPostsHeader {
-    margin-bottom: 25px;
+    margin: 25px 20px;
   }
   #postFilterContainer {
     display: flex;
@@ -14,8 +14,9 @@
     justify-content: center;
     flex-wrap: wrap;
     background-color: #f3f3f3;
-    padding: 25px;
-    max-width: 750px;
+    padding: 20px;
+    margin: 0px 15px;
+    max-width: 800px;
     border-radius: 15px;
 
     p {
@@ -26,9 +27,10 @@
     }
 
     .filter {
-      margin: 0px 10px;
+      margin: 5px 10px;
       padding: 5px 15px;
       background-color: color(smBlue);
+      font-size: 12pt;
     }
   }
 }
