--- a/src/sass/2-Pages/_home.scss
+++ b/src/sass/2-Pages/_home.scss
@@ -28,6 +28,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    margin-bottom: 75px;
 
     h3 {
       font-family: "Inter";
@@ -49,13 +50,30 @@
   }
 }
 
-#recentPostsContainer {
-  border-radius: 24px;
+.recentPostCards {
+  border-radius: 20px;
   background: #ffffff;
-  box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
-  display: flex;
-  margin: auto;
-  margin-top: 100px;
-  padding: 50px;
-  max-width: 1000px;
+  box-shadow: 20px 20px 40px #d9d9d9, -20px -20px 60px #ffffff;
+  width: 300px;
+  padding: 20px 25px;
+  margin-top: 35px;
+
+  .cardArticleTitle {
+    font-family: "Inter";
+    font-weight: 700;
+    font-size: 16pt;
+  }
+
+  .cardArticleExcerpt {
+    font-family: "Inter";
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+
+  .cardReadMore {
+    font-family: "Inter";
+    font-weight: 500;
+    color: color(smBlue);
+    margin-bottom: 10px;
+  }
 }
