--- a/src/sass/2-Pages/_blog.scss
+++ b/src/sass/2-Pages/_blog.scss
@@ -21,8 +21,7 @@
 
     p {
       margin: auto 10px;
-      font-family: "Inter";
-      font-weight: 600;
+      font-family: "InterSemiBold";
       color: black;
     }
 
