--- a/src/sass/3-BlogTopics/_creditCards.scss
+++ b/src/sass/3-BlogTopics/_creditCards.scss
@@ -1,7 +1,6 @@
 .topicLabel {
   text-align: center;
-  font-family: "Inter";
-  font-weight: 800;
+  font-family: "InterExtraBold";
   font-size: 16pt;
   color: color(smBlue);
 }
