--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -430,8 +430,7 @@ a:hover {
 }
 
 .navBrand {
-  font-family: "Inter";
-  font-weight: 700;
+  font-family: "InterExtraBold";
   color: black;
   font-size: 14pt;
   padding: 0;
