--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -33,8 +33,7 @@
 }
 
 .navBrand {
-  font-family: "Inter";
-  font-weight: 700;
+  font-family: "InterExtraBold";
   color: black;
   font-size: 14pt;
   padding: 0;
