--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -4,6 +4,7 @@
 @import "1-Basics/page";
 
 //2-Pages
+@import "2-Pages/splash";
 @import "2-Pages/home";
 @import "2-Pages/blog";
 @import "2-Pages/resources";
