--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -162,6 +162,8 @@ a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -177,12 +179,14 @@ a:hover {
 
 #splashContainer #smSplashLogo {
   height: 100px;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
 }
 
 #splashContainer #splashTitle {
   font-family: "InterSemiBold";
   font-size: 32pt;
+  margin: 25px;
+  text-align: center;
 }
 
 #landingHeader {
