--- a/src/sass/2-Pages/_home.scss
+++ b/src/sass/2-Pages/_home.scss
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     margin-bottom: 75px;
 
     h3 {
