--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -238,7 +238,7 @@ a:hover {
           align-items: center;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
-          justify-content: start;
+          justify-content: flex-start;
   margin-bottom: 75px;
 }
 
