--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -70,8 +70,8 @@
 }
 
 .footerLeftColumn {
-  line-height: 0;
-  margin: 40px;
+  line-height: 14pt;
+  margin: 20px;
   margin-bottom: 30px;
 
   p {
