--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -515,8 +515,8 @@ a:hover {
 }
 
 .footerLeftColumn {
-  line-height: 0;
-  margin: 40px;
+  line-height: 14pt;
+  margin: 20px;
   margin-bottom: 30px;
 }
 
