--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -27,6 +27,10 @@
   display: flex;
 }
 
+html {
+  margin-bottom: 100px;
+}
+
 .navBar {
   border-radius: 0px 0px 15px 15px;
   background-color: #f3f3f3;
@@ -64,6 +68,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  margin-top: 75px;
 
   background-color: #f3f3f3;
   border-radius: 15px 15px 0px 0px;
