--- a/src/sass/2-Pages/_home.scss
+++ b/src/sass/2-Pages/_home.scss
@@ -49,6 +49,19 @@
   }
 }
 
+#recentPostsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  #recentPostsHeading {
+  }
+}
+
+#cardRowOne {
+  display: flex;
+}
+
 .recentPostCards {
   border-radius: 20px;
   background: #ffffff;
@@ -56,6 +69,7 @@
   width: 300px;
   padding: 20px 25px;
   margin-top: 35px;
+  margin-right: 25px;
 
   .cardArticleTitle {
     font-family: "InterBold";
