--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -259,6 +259,25 @@ a:hover {
   background-color: #1b94ff;
 }
 
+#recentPostsContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#cardRowOne {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .recentPostCards {
   border-radius: 20px;
   background: #ffffff;
@@ -267,6 +286,7 @@ a:hover {
   width: 300px;
   padding: 20px 25px;
   margin-top: 35px;
+  margin-right: 25px;
 }
 
 .recentPostCards .cardArticleTitle {
