--- a/src/sass/2-Pages/_compoundInterestCalculator.scss
+++ b/src/sass/2-Pages/_compoundInterestCalculator.scss
@@ -31,6 +31,9 @@
 
   .calcInputField {
     background-color: #e7e7e7;
+    width: 100%;
+    height: 50px;
+    border-radius: 7px;
     border: none;
     text-align: center;
     font-family: monospace;
@@ -80,6 +83,17 @@
   #futureValueDiv {
     background-color: white;
     border-radius: 7px;
+    border: none;
+    width: 100%;
     height: 65px;
+    text-align: center;
+    font-family: monospace;
+    font-weight: 500;
+    // font-style: oblique;
+    color: black;
+    font-size: 20pt;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
