--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -386,6 +386,9 @@ a:hover {
 
 #calculatorBody .calcInputField {
   background-color: #e7e7e7;
+  width: 100%;
+  height: 50px;
+  border-radius: 7px;
   border: none;
   text-align: center;
   font-family: monospace;
@@ -444,7 +447,23 @@ a:hover {
 #calculatorBody #futureValueDiv {
   background-color: white;
   border-radius: 7px;
+  border: none;
+  width: 100%;
   height: 65px;
+  text-align: center;
+  font-family: monospace;
+  font-weight: 500;
+  color: black;
+  font-size: 20pt;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .topicLabel {
